--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@morpheus/eslint-config-morpheus",
+  "name": "@morpheus/eslint-config",
   "version": "1.0.0",
   "private": false,
   "description": "ESLint configuration used by Morpheus Tecnologia.",
